<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="fragmentest.ctrlz.com.fragmenttest.Sender"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ruleNameText"
        android:hint="@string/ruleName_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip1Text"
        android:hint="@string/ip1_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip2Text"
        android:hint="@string/ip2_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_send"
        android:text="@string/btn_denegar_txt"
        android:onClick="btnClicked"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ipServerText"
        android:hint="@string/ipServer_hint"
        android:text="@string/ipServer_default"/>

</LinearLayout>
